# collectd-write-graphite

./: .gitignore  configure.in
src/: Makefile.am  graphite.c  write_graphite.c
